--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Todo</title>
+    <title>PokémonSearch</title>
     <meta name="description" content="Best Pizza in Town" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../andrez_romero_todo/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../andrez_romero_ajax/css/style.css">
 
     <link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -16,59 +16,50 @@
 <body>
     <header>
         <div class="main_header">
-            <h1>Todo List </h1> <i class="fa fa-check-square-o fa-5x" aria-hidden="true"></i>
+            <div class="left_header_img">
+                <img src="../andrez_romero_ajax/images/logo.png"> </div>
+            <div class="right_header_img">
+                <img src="../andrez_romero_ajax/images/snorlax.png">
+            </div>
+            <br />
+            <h1>POKÉMON STAT SEARCH </h1>
             <br />
             <h2>
-                Add a Todo here:
+                Search Pokémon here:
             </h2> <br /> <br />
 
-            <input type="text" id="submit_todo">
+            <input type="text" id="searchPokemon" placeholder="Write your Pokemon Here"12>
             <button class="button_style" onclick="input_Todo()">Submit</button>
         </div>
     </header>
 
     <main>
 
-        <div class="left_todo">
+        <div class="left_card">
             <div class="left_header">
-                <h2>
-                    Todo's <i class="fa fa-square-o"></i>
-                </h2>
+
+
+    <div id="Pokemon">
+        
+                </div>
+
+
             </div>
-            <div class="right_header">
-                <button class="button_style" onclick="delete_allTodos()">Delete All</button>
-            </div>
-            <br /><br /><br /><br />
-            <ul id="todo">
-                <li>Sova</li>
-                <li>Träna</li>
-                <li>Laga mat</li>
-                <li>Diska</li>
-                <li>Plugga</li>
-            </ul>
+
         </div>
 
-        <div class="right_todo">
-            <div class="left_header">
-                <h2>
-                    Done Todos
-                    <i class="fa fa-check-square-o"></i>
-                </h2>
-            </div>
+        <div class="right_card">
             <div class="right_header">
-                <button class="button_style" onclick="delete_allDoneTodos()">Delete All</button>
+
             </div>
-            <br /><br /><br /><br />
-            <ul id="done_todo">
-            </ul>
-            <br />
+
         </div>
 
     </main>
 
     <footer>
         Andrez Romero 2018 ©
-        <script src="../andrez_romero_todo/main.js"></script>
+        <script src="../andrez_romero_ajax/main.js"></script>
     </footer>
 
 </body>
