--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+
 </head>
 
 <body>
@@ -28,8 +29,8 @@
                 Search Pokémon here:
             </h2> <br /> <br />
 
-            <input type="text" id="searchPokemon" placeholder="Write your Pokemon Here"12>
-            <button class="button_style" onclick="input_Todo()">Submit</button>
+            <input type="text" id="searchPokemon" placeholder="Write your Pokemon Here">
+<!--            <button class="button_style" onclick="input_Todo()">Submit</button>-->
         </div>
     </header>
 
@@ -42,6 +43,13 @@
     <div id="Pokemon">
         
                 </div>
+
+<!--
+  <input type="text" id="input">
+  <div id="movies">
+    
+  </div>
+-->
 
 
             </div>
