--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>PokémonSearch</title>
-    <meta name="description" content="Best Pizza in Town" />
+    <title>Pokédex</title>
+    <meta name="description" content="Best Pokedex" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../andrez_romero_ajax/css/style.css">
 
@@ -23,7 +23,7 @@
                 <img src="../andrez_romero_ajax/images/snorlax.png">
             </div>
             <br />
-            <h1>POKÉMON STAT SEARCH </h1>
+            <h1>POKÉDEX OF ORIGINAL 151</h1>
             <br />
             <h2>
                 Search Pokémon here:
