--- a/index.html
+++ b/index.html
@@ -31,7 +31,18 @@
 
             <input type="text" id="searchPokemon" placeholder="Write your Pokemon Here">
 <!--            <button class="button_style" onclick="input_Todo()">Submit</button>-->
+
+<div class="dropdown">
+  <button onclick="myFunction()" class="dropbtn">Or Choose From The List</button>
+  <div id="myDropdown" class="dropdown-content scrollable-menu">
+    <div id="Pokemon">
+        
+                </div>
+  </div>
+</div>
         </div>
+
+
     </header>
 
     <main>
@@ -40,9 +51,7 @@
             <div class="left_header">
 
 
-    <div id="Pokemon">
-        
-                </div>
+
 
 <!--
   <input type="text" id="input">
