--- a/index.html
+++ b/index.html
@@ -51,14 +51,9 @@
             <div class="left_header">
 
 
-
-
-<!--
-  <input type="text" id="input">
-  <div id="movies">
-    
-  </div>
--->
+    <div id="Pokemon_info_1">
+        
+                </div>
 
 
             </div>
