--- a/index.html
+++ b/index.html
@@ -49,35 +49,22 @@
 
     <main>
 
-        <div class="left_card">
-            <div class="left_header">
+        <div class="middle_parent_box">
+            <div class="middle_main_box">
 
-
-    <p id="displayPokemonBox">
-        
-                </p>
 
 
     <div id="displayPokemon">
         
                 </div>
+<!--
   <div id="movieInfo">
 
   </div>
                     <div id="weatherInfo">
     </div>
-
-<!--
-<form id=pokeform>
-  <input id=pokenumber placeholder="Number of the pokemon"/>
-  <button type=submit>Go!</button>
-</form>
-
-<h1 id=pokename></h1>
-<h1 id=pokeid></h1>
-
-<img id="pokeimage"/>
 -->
+
             </div>
 
         </div>
