--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" type="text/css" href="../andrez_romero_ajax/css/style.css">
 
     <link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
 
 
 </head>
@@ -52,7 +51,9 @@
         <div class="middle_parent_box">
             <div class="middle_main_box">
 
-
+<div id="loading">
+<img id="loading-image" src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Loading_icon.gif" alt="Loading..." />
+</div>  
 
     <div id="displayPokemon">
         
