--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Pokédex</title>
-    <meta name="description" content="Best Pokedex" />
+    <meta name="description" content="Pokédex by Andrez Romero" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../andrez_romero_ajax/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet">
