--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Pokédex</title>
     <meta name="description" content="Pokédex by Andrez Romero" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../andrez_romero_ajax/css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet">
 </head>
 
@@ -41,7 +41,7 @@
 
     <footer>
         Andrez Romero 2018 ©
-        <script src="../andrez_romero_ajax/main.js"></script>
+        <script src="js/main.js"></script>
     </footer>
 
 </body>
