--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <header>
         <div class="main_header">
             <div class="left_header_img">
-                <img src="../andrez_romero_ajax/images/logo.png"> </div>
+                <img src="images/logo.png"> </div>
             <div class="right_header_img">
-                <img src="../andrez_romero_ajax/images/snorlax.png">
+                <img src="images/snorlax.png">
             </div>
             <h1>POKÉDEX OF THE ORIGINAL 151</h1>
             <br /><br />
